--- a/MapAndLoc.html
+++ b/MapAndLoc.html
@@ -148,8 +148,8 @@
    </div>
 
     
-       <script async defer src="https://maps.googleapis.com/maps/api/js?key=<API_KEY>&libraries=places"
-        ></script>
+       <script async defer src="https://maps.googleapis.com/maps/api/js?key=<API_KEY>&libraries=places">
+      </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
    
     <script>
